Стилизация главная страница - планшет

--- a/source/index.html
+++ b/source/index.html
@@ -90,7 +90,7 @@
             <div class="features__block-container">
               <h2 class="features__title">Небольшая площадь</h2>
               <p class="features__number features__number-tablet">—№3—</p>
-              <p class="features__text features__text-width">Все интересные места находятся очень близко</p>
+              <p class="features__text">Все интересные места находятся очень близко</p>
             </div>
           </div>
           <div class="features__block features__block-border">
@@ -104,16 +104,15 @@
             <div class="features__block-container">
               <h2 class="features__title">Мало туристов</h2>
               <p class="features__number">—№5—</p>
-              <p class="features__text features__text-width">Большинство едет в Гранд каньон и толпится там</p>
+              <p class="features__text">Большинство едет в Гранд каньон и толпится там</p>
             </div>
           </div>
         </section>
         <section class="interesting">
           <div class="interesting__container">
             <h2 class="interesting__title">Заинтересовались?</h2>
-            <p class="interesting__text">Укажите предпологаемые даты
-              поездки, и мы покажем вам лучшие
-              предложения гостиниц в Седоне</p>
+            <p class="interesting__text">Укажите предпологаемые даты поездки,
+              <span class="interesting__text-addition">и мы покажем вам лучшие предложения гостиниц в Седоне</span></p>
             <a class="interesting__search" href="#">Найти гостиницу</a>
           </div>
           <div class="interesting__map-container">
