Стилизация главной страницы десктоп

--- a/source/index.html
+++ b/source/index.html
@@ -64,12 +64,12 @@
             </div>
             <div class="town__souvenirs">
               <h3 class="town__title">Сувениры</h3>
-              <p class="town__text">Не только китайского, но и
-              метсного производства!</p>
+              <p class="town__text town__text-desktop">Не только китайского,
+                <span class="town__text-addition">но и метсного производства!</span></p>
             </div>
             <div class="town__food">
               <h3 class="town__title">Еда</h3>
-              <p class="town__text town__text-mobile town__text-tablet">Всегда заказывайте
+              <p class="town__text town__text-mobile town__text-tablet town__text-desktop">Всегда заказывайте
               фирменный бургер, вы не
               разочаруетесь!</p>
             </div>
