Стилизация формы мобильный

--- a/source/form.html
+++ b/source/form.html
@@ -68,7 +68,7 @@
                 </div>
               </div>
               <div class="form-feedback__connection">
-                <h3 class="form-feedback__title form-feedback__title-connection">Контактная информация:</h3>
+                <h3 class="form-feedback__title form-feedback__title-connection form-feedback__title-mob">Контактная информация:</h3>
                   <div class="form-feedback__container">
                     <div class="form-feedback__data-info">
                       <label for="phone">Контактный телефон:
@@ -85,7 +85,7 @@
                   </div>
               </div>
               <div class="form-feedback__impression">
-                <h3 class="form-feedback__title form-feedback__title-impression">Ваше общее впечатление:</h3>
+                <h3 class="form-feedback__title form-feedback__title-impression form-feedback__title-mob">Ваше общее впечатление:</h3>
                 <ul class="form-feedback__impression-list">
                   <li class="form-feedback__impression-item">
                     <label class="form-feedback__check" for="check-positive">
@@ -108,7 +108,7 @@
                 </ul>
               </div>
               <div class="form-feedback__attractions">
-                <h3 class="form-feedback__title form-feedback__title-attractions">Посещаемые достопримечательности:</h3>
+                <h3 class="form-feedback__title form-feedback__title-attractions">Посещенные достопримечательности:</h3>
                 <ul class="form-feedback__attractions-list">
                   <li class="form-feedback__attractions-item">
                     <label class="from-feedback__attractions-check" for="bridge">
@@ -142,7 +142,7 @@
                   <textarea class="form-feedback__description-text" name="text" cols="30" rows="10" placeholder="Опишите подробно все свои восторги"></textarea>
                 </div>
               </div>
-              <button class="form-feedback__button" type="submit">Оставить отзыв</button>
+              <button class="form-feedback__button" type="submit">Отправить отзыв</button>
               <span class="form-feedback__addition">* — обязательные поля</span>
             </form>
           </div>
