Стилизация формы десктоп (в процессе)

--- a/source/form.html
+++ b/source/form.html
@@ -71,7 +71,8 @@
                 <h3 class="form-feedback__title form-feedback__title-connection form-feedback__title-mob">Контактная информация:</h3>
                   <div class="form-feedback__container">
                     <div class="form-feedback__data-info">
-                      <label for="phone">Контактный телефон:
+                      <label for="phone"><span class="form-feedback__data-info-visual">Контактный телефон*:</span>
+                        <span class="form-feedback__data-info-hide">Телефон*:</span>
                         <input type="tel" name="tel" id="phone" placeholder="Введите телефон">
                         <div class="form-feedback__decoration-phone-container"></div>
                       </label>
