Стилизация формы - десктоп

--- a/source/form.html
+++ b/source/form.html
@@ -152,7 +152,7 @@
         </section>
       </main>
       <footer class="page-footer">
-        <section class="social">
+        <section class="social social-feedback">
           <h2 class="social__title">#visitsedona</h2>
           <div class="social__links">
             <a class="social__item" href="#"><span class="visually-hidden">twitter</span></a>
