Исправление логотипа - адаптив

--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,13 @@
                 <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span>Html Academy</span></a>
               </li>
               <li class="main-nav__item main-nav__item--logo">
-                <a class="main-nav__link-logo" href="#"></a>
+                <a class="main-nav__link-logo" href="#">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="../img/desktop/logotype-desktop.svg">
+                    <source media="(min-width: 768px)" srcset="../img/tablet/logotype-tablet.svg">
+                    <img src="../img/menu/logotype-mobile.svg" alt="Логотип Седона">
+                  </picture>
+                </a>
               </li>
               <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
             </ul>
