Стилизация каталог мобильный

--- a/source/form.html
+++ b/source/form.html
@@ -27,9 +27,9 @@
               <li class="main-nav__item main-nav__item--logo">
                 <a class="main-nav__link-logo" href="#">
                   <picture>
-                    <source media="(min-width: 1200px)" srcset="img/desktop/logotype-desktop.svg">
-                    <source media="(min-width: 768px)" srcset="img/menu/logotype-mobile.svg">
-                    <img src="img/menu/logotype-mobile.svg" width="187" height="97" alt="Логотип Седона">
+                    <source media="(min-width: 1200px)" srcset="../img/desktop/logotype-desktop.svg">
+                    <source media="(min-width: 768px)" srcset="../img/tablet/logotype-tablet.svg">
+                    <img src="../img/menu/logotype-mobile.svg" alt="Логотип Седона">
                   </picture>
                 </a>
               </li>
