--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,9 +27,9 @@
               <li class="main-nav__item main-nav__item--logo">
                 <a class="main-nav__link-logo" href="#">
                   <picture>
-                    <source media="(min-width: 1200px)" srcset="img/desktop/logotype-desktop.svg">
-                    <source media="(min-width: 768px)" srcset="img/menu/logotype-mobile.svg">
-                    <img src="img/menu/logotype-mobile.svg" width="187" height="97" alt="Логотип Седона">
+                    <source media="(min-width: 1200px)" srcset="../img/desktop/logotype-desktop.svg">
+                    <source media="(min-width: 768px)" srcset="../img/tablet/logotype-tablet.svg">
+                    <img src="../img/menu/logotype-mobile.svg" alt="Логотип Седона">
                   </picture>
                 </a>
               </li>
@@ -46,7 +46,7 @@
         </section>
         <section class="media">
           <div class="description">
-            <h2 class="description__general-title">Фото и видео</h2>
+            <h2 class="description__general-title description__catalog-title">Фото и видео</h2>
             <p class="description__text description__general-text">
               Не можете решиться на путишествие
               из-за курса? Фотографии помогут вам
@@ -76,7 +76,7 @@
           </div>
           <div class="media__img-gallery">
             <div class="media__photo">
-              <div class="media__inner-container">
+              <div class="media__inner-container media__inner-img-1">
                 <div class="media__img-container-small media__img-1">
                   <img class="media__img" src="img/catalog/photo-2-mobile-catalog.jpg" width="280" height="280" alt="Местная растительность">
                 </div>
@@ -86,7 +86,7 @@
                     <p class="media__figcaption">Автор фото: Сергей</p>
                   </div>
                   <span class="media__likes">143</span>
-                  <div class="media__like-container">
+                  <div class="media__like-container media__like-container-1">
                     <svg class="media__like-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
                     </svg>
@@ -95,7 +95,7 @@
               </div>
             </div>
             <div class="media__photo">
-              <div class="media__inner-container">
+              <div class="media__inner-container media__inner-img-2">
                 <div class="media__img-container-small media__img-2">
                   <img class="media__img" src="img/catalog/photo-3-mobile-catalog.jpg" width="280" height="280" alt="Дорога на север">
                 </div>
@@ -105,7 +105,7 @@
                     <p class="media__figcaption">Автор фото: Петр</p>
                   </div>
                   <span class="media__likes">96</span>
-                  <div class="media__like-container">
+                  <div class="media__like-container media__like-container-2">
                     <svg class="media__like-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
                     </svg>
@@ -114,7 +114,7 @@
               </div>
             </div>
             <div class="media__photo">
-              <div class="media__inner-container">
+              <div class="media__inner-container media__inner-img-3">
                 <div class="media__img-container-small media__img-3">
                   <img class="media__img" src="img/catalog/photo-4-mobile-catalog.jpg" width="280" height="280" alt="Мост дьявола">
                 </div>
@@ -124,7 +124,7 @@
                     <p class="media__figcaption">Автор фото: Антон</p>
                   </div>
                   <span class="media__likes">254</span>
-                  <div class="media__like-container">
+                  <div class="media__like-container media__like-container-3">
                     <svg class="media__like-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
                     </svg>
@@ -134,8 +134,8 @@
             </div>
           </div>
           <div class="description">
-            <h3 class="description__general-title">Вы еще сомневаетесь?</h3>
-            <p class="description__text description__general-text">
+            <h3 class="description__general-title description__catalog-subtitle">Все еще сомневаетесь?</h3>
+            <p class="description__text description__general-text description__catalog-subtext">
               Смотрите видеопрезентацию и
               скорее за билетами, пока они не
               подорожали в очередной раз!
