Стилизация каталога / добавлены границы блоков / мобильный

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -53,7 +53,7 @@
               забыть о политике и экономике.
             </p>
           </div>
-          <div class="media__photo">
+          <div class="media__photo media__photo-main">
             <div class="media__inner-container">
               <div class="media__img-container">
                 <img class="media__img" src="img/catalog/photo-1-mobile-catalog.jpg" width="280" height="280" alt="Народные просторы">
@@ -75,7 +75,7 @@
             </div>
           </div>
           <div class="media__img-gallery">
-            <div class="media__photo">
+            <div class="media__photo media__photo-border">
               <div class="media__inner-container media__inner-img-1">
                 <div class="media__img-container-small media__img-1">
                   <img class="media__img" src="img/catalog/photo-2-mobile-catalog.jpg" width="280" height="280" alt="Местная растительность">
@@ -94,7 +94,7 @@
                 </div>
               </div>
             </div>
-            <div class="media__photo">
+            <div class="media__photo media__photo-border">
               <div class="media__inner-container media__inner-img-2">
                 <div class="media__img-container-small media__img-2">
                   <img class="media__img" src="img/catalog/photo-3-mobile-catalog.jpg" width="280" height="280" alt="Дорога на север">
@@ -113,7 +113,7 @@
                 </div>
               </div>
             </div>
-            <div class="media__photo">
+            <div class="media__photo media__photo-border">
               <div class="media__inner-container media__inner-img-3">
                 <div class="media__img-container-small media__img-3">
                   <img class="media__img" src="img/catalog/photo-4-mobile-catalog.jpg" width="280" height="280" alt="Мост дьявола">
@@ -133,7 +133,7 @@
               </div>
             </div>
           </div>
-          <div class="description">
+          <div class="description description-border">
             <h3 class="description__general-title description__catalog-subtitle">Все еще сомневаетесь?</h3>
             <p class="description__text description__general-text description__catalog-subtext">
               Смотрите видеопрезентацию и
