--- a/source/index.html
+++ b/source/index.html
@@ -60,7 +60,11 @@
             </div>
           </div>
           <div class="town__img-container">
-            <img class="town__img" src="img/main/city.jpg" width="320" height="260" alt="Фото города">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/desktop/photo-city-desktop.jpg 1x, img/desktop/photo-city-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/tablet/photo-city-tablet.jpg 1x, img/tablet/photo-city-tablet@2x.jpg 2x">
+              <img class="town__img" src="img/main/city.jpg" srcset="img/main/photo-city-mobile@2x.jpg 2x" width="320" height="260" alt="Фото города">
+            </picture>
           </div>
           <div class="town__container">
             <div class="town__housing">
@@ -90,7 +94,11 @@
             </div>
           </div>
           <div class="features__container">
-            <img class="features__img" src="img/main/bridge.png" width="320" height="260" alt="Фото каньона">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.jpg 1x, img/desktop/photo-bridge-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/tablet/devil-bridge.jpg 1x, img/tablet/photo-bridge-tablet@2x.jpg 2x">
+              <img class="features__img" src="img/main/photo-bridge@1x.jpg" srcset="img/main/photo-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Фото каньона">
+            </picture>
           </div>
           <div class="features__block">
             <div class="features__block-container">
@@ -122,7 +130,11 @@
             <a class="interesting__search" href="#">Найти гостиницу</a>
           </div>
           <div class="interesting__map-container">
-            <img class="interesting__map" src="img/main/map-mobile.jpg" height="350" width="320" alt="Карта">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.jpg 1x, img/desktop/map-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/tablet/devil-bridge.jpg 1x, img/tablet/map-tablet@2x.jpg 2x">
+              <img class="interesting__map" src="img/main/map-mobile@1x.jpg" srcset="img/main/map-mobile@2x.jpg 2x" height="350" width="320" alt="Карта">
+            </picture>
           </div>
         </section>
       </main>
