--- a/source/form.html
+++ b/source/form.html
@@ -13,16 +13,16 @@
           <div class="main-nav__wrapper">
             <ul class="main-nav__list">
               <li class="main-nav__item">
-                <a class="main-nav__link main-nav__link--size-a" href="index.html"><span>Главная</span></a>
+                <a class="main-nav__link main-nav__link--size-a" href="index.html"><span class="main-nav__text">Главная</span></a>
               </li>
               <li class="main-nav__item">
-                <a class="main-nav__link main-nav__link--size-b" href="catalog.html"><span>Фото и видео</span></a>
+                <a class="main-nav__link main-nav__link--size-b" href="catalog.html"><span class="main-nav__text">Фото и видео</span></a>
               </li>
               <li class="main-nav__item">
-                <a class="main-nav__link main-nav__link--size-c" href="form.html"><span>Форма отзыва</span></a>
+                <a class="main-nav__link main-nav__link--size-c" href="form.html"><span class="main-nav__text">Форма отзыва</span></a>
               </li>
               <li class="main-nav__item">
-                <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span>Html Academy</span></a>
+                <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span class="main-nav__text">Html Academy</span></a>
               </li>
               <li class="main-nav__item main-nav__item--logo">
                 <a class="main-nav__link-logo" href="#">
@@ -165,7 +165,13 @@
             <a class="social__item" href="#"><span class="visually-hidden">facebook</span></a>
             <a class="social__item" href="#"><span class="visually-hidden">youtube</span></a>
           </div>
-          <a class="social__dev" href="#">Разработано</a>
+          <a class="social__dev" href="#">Разработано
+            <div class="social__dev-icon-container">
+              <svg class="social__dev-icon" width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="black"/>
+              </svg>
+            </div>
+          </a>
         </section>
       </footer>
     </div>
