--- a/source/catalog.html
+++ b/source/catalog.html
@@ -56,7 +56,11 @@
           <div class="media__photo media__photo-main">
             <div class="media__inner-container">
               <div class="media__img-container">
-                <img class="media__img" src="img/catalog/photo-1-mobile-catalog.jpg" width="280" height="280" alt="Народные просторы">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/desktop/photo-1-desktop.jpg 1x, img/desktop/photo-1-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/tablet/photo-1-tablet.jpg 1x, img/tablet/photo-1-tablet@2x.jpg 2x">
+                  <img class="media__img" src="img/catalog/photo-1-mobile-catalog.jpg" srcset="img/catalog/photo-1-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Народные просторы">
+                </picture>
               </div>
               <div class="media__caption-container media__caption-first">
                 <div class="media__caption-opacity">
@@ -78,7 +82,11 @@
             <div class="media__photo media__photo-border">
               <div class="media__inner-container media__inner-img-1">
                 <div class="media__img-container-small media__img-1">
-                  <img class="media__img" src="img/catalog/photo-2-mobile-catalog.jpg" width="280" height="280" alt="Местная растительность">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="img/desktop/photo-2-desktop.jpg 1x, img/desktop/photo-2-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/tablet/photo-2-tablet.jpg 1x, img/tablet/photo-2-tablet@2x.jpg 2x">
+                    <img class="media__img" src="img/catalog/photo-2-mobile-catalog.jpg" srcset="img/catalog/photo-2-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Местная растительность">
+                  </picture>
                 </div>
                 <div class="media__caption-container media__caption-second">
                   <div class="media__caption-name">
@@ -97,7 +105,11 @@
             <div class="media__photo media__photo-border">
               <div class="media__inner-container media__inner-img-2">
                 <div class="media__img-container-small media__img-2">
-                  <img class="media__img" src="img/catalog/photo-3-mobile-catalog.jpg" width="280" height="280" alt="Дорога на север">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="img/desktop/photo-3-desktop.jpg 1x, img/desktop/photo-3-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/tablet/photo-3-tablet.jpg 1x, img/tablet/photo-3-tablet@2x.jpg 2x">
+                    <img class="media__img" src="img/catalog/photo-3-mobile-catalog.jpg" srcset="img/catalog/photo-3-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Дорога на север">
+                  </picture>
                 </div>
                 <div class="media__caption-container media__caption-color media__caption-second">
                   <div class="media__caption-name">
@@ -116,7 +128,11 @@
             <div class="media__photo media__photo-border">
               <div class="media__inner-container media__inner-img-3">
                 <div class="media__img-container-small media__img-3">
-                  <img class="media__img" src="img/catalog/photo-4-mobile-catalog.jpg" width="280" height="280" alt="Мост дьявола">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="img/desktop/photo-4-desktop.jpg 1x, img/desktop/photo-4-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/tablet/photo-4-tablet.jpg 1x, img/tablet/photo-4-tablet@2x.jpg 2x">
+                    <img class="media__img" src="img/catalog/photo-4-mobile-catalog.jpg" srcset="img/catalog/photo-4-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Мост дьявола">
+                  </picture>
                 </div>
                 <div class="media__caption-container media__caption-second">
                   <div class="media__caption-name">
