Подключены спрайты к секции town главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,7 @@
                   <picture>
                     <source media="(min-width: 1200px)" srcset="../img/desktop/logotype-desktop.svg">
                     <source media="(min-width: 768px)" srcset="../img/tablet/logotype-tablet.svg">
-                    <img src="../img/menu/logotype-mobile.svg" alt="Логотип Седона">
+                    <img src="img/menu/logotype-mobile.svg" alt="Логотип Седона">
                   </picture>
                 </a>
               </li>
@@ -68,20 +68,28 @@
           </div>
           <div class="town__container">
             <div class="town__housing">
+              <svg class="town__icon-house">
+                <use xlink:href="img/sprite.svg#icon-house"></use>
+              </svg>
               <h3 class="town__title">Жилье</h3>
               <p class="town__text">Рекомендуем пожить в
                 настоящем мотеле, все как в кино!</p>
             </div>
             <div class="town__souvenirs">
+              <svg class="town__icon-souvenir">
+                <use xlink:href="img/sprite.svg#icon-souvenir"></use>
+              </svg>
               <h3 class="town__title">Сувениры</h3>
               <p class="town__text town__text-desktop">Не только китайского,
                 <span class="town__text-addition">но и метсного производства!</span></p>
             </div>
             <div class="town__food">
+              <svg class="town__icon-food">
+                <use xlink:href="img/sprite.svg#icon-burger"></use>
+              </svg>
               <h3 class="town__title">Еда</h3>
               <p class="town__text town__text-mobile town__text-tablet town__text-desktop">Всегда заказывайте
-              фирменный бургер, вы не
-              разочаруетесь!</p>
+              фирменный бургер, вы не разочаруетесь!</p>
             </div>
           </div>
         </section>
