Исправление ошибок/графики/исправление структуры файлов

--- a/source/index.html
+++ b/source/index.html
@@ -62,9 +62,15 @@
           </div>
           <div class="town__img-container">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/desktop/photo-city-desktop.webp 1x, img/desktop/photo-city-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="img/tablet/photo-city-tablet.webp 1x, img/tablet/photo-city-tablet@2x.webp 2x">
-              <img class="town__img" src="img/main/city.webp" srcset="img/main/photo-city-mobile@2x.webp 2x" width="320" height="260" alt="Фото города">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/desktop/photo-city-desktop.webp 1x, img/desktop/photo-city-desktop@2x.webp 2x">
+
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/tablet/photo-city-tablet.webp 1x, img/tablet/photo-city-tablet@2x.webp 2x">
+
+              <source type="image/webp" srcset="img/main/city.webp 1x, img/main/photo-city-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1200px)" srcset="img/desktop/photo-city-desktop.jpg 1x, img/desktop/photo-city-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/tablet/photo-city-tablet.jpg 1x, img/tablet/photo-city-tablet@2x.jpg 2x">
+              <img class="town__img" src="img/main/city.jpg" srcset="img/main/photo-city-mobile@2x.jpg 2x" width="320" height="260" alt="Фото города">
             </picture>
           </div>
           <div class="town__container">
@@ -104,9 +110,15 @@
           </div>
           <div class="features__container">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.webp 1x, img/desktop/photo-bridge-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="img/tablet/devil-bridge.webp 1x, img/tablet/photo-bridge-tablet@2x.webp 2x">
-              <img class="features__img" src="img/main/photo-bridge@1x.webp" srcset="img/main/photo-bridge-mobile@2x.webp 2x" width="320" height="260" alt="Фото каньона">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.webp 1x, img/desktop/photo-bridge-desktop@2x.webp 2x">
+
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/tablet/devil-bridge.webp 1x, img/tablet/photo-bridge-tablet@2x.webp 2x">
+
+              <source type="image/webp" srcset="img/main/photo-bridge@1x.webp 1x, img/main/photo-bridge-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.jpg 1x, img/desktop/photo-bridge-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/tablet/devil-bridge.jpg 1x, img/tablet/photo-bridge-tablet@2x.jpg 2x">
+              <img class="features__img" src="img/main/photo-bridge@1x.jpg" srcset="img/main/photo-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Фото каньона">
             </picture>
           </div>
           <div class="features__block">
@@ -140,9 +152,15 @@
           </div>
           <div class="interesting__map-container">
             <picture>
-              <source media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.webp 1x, img/desktop/map-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="img/tablet/devil-bridge.webp 1x, img/tablet/map-tablet@2x.webp 2x">
-              <img class="interesting__map" src="img/main/map-mobile@1x.webp" srcset="img/main/map-mobile@2x.webp 2x" height="350" width="320" alt="Карта">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.webp 1x, img/desktop/map-desktop@2x.webp 2x">
+
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/tablet/devil-bridge.webp 1x, mg/tablet/map-tablet@2x.webp 2x">
+
+              <source type="image/webp" srcset="img/main/map-mobile@1x.webp 1x, img/main/map-mobile@2x.webp 2x">
+
+              <source media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.jpg 1x, img/desktop/map-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/tablet/devil-bridge.jpg 1x, img/tablet/map-tablet@2x.jpg 2x">
+              <img class="interesting__map" src="img/main/map-mobile@1x.jpg" srcset="img/main/map-mobile@2x.jpg 2x" height="350" width="320" alt="Карта">
             </picture>
           </div>
         </section>
