--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,12 +26,11 @@
               </li>
               <li class="main-nav__item main-nav__item--logo">
                 <a class="main-nav__link-logo" href="#">
-                  <svg class="main-nav__icon-logo">
-                    <use xlink:href="img/sprite.svg#icon-logo"></use>
-                  </svg>
-                  <svg class="main-nav__icon-logo-desktop">
-                    <use xlink:href="img/sprite.svg#icon-logo-desktop"></use>
-                  </svg>
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="../img/desktop/logotype-desktop.svg">
+                    <source media="(min-width: 768px)" srcset="../img/tablet/logotype-tablet.svg">
+                    <img src="../img/menu/logotype-mobile.svg" alt="Логотип Седона">
+                  </picture>
                 </a>
               </li>
               <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
@@ -56,15 +55,13 @@
           </div>
           <div class="media__photo media__photo-main">
             <div class="media__inner-container">
-              <a href="#">
-                <div class="media__img-container">
-                  <picture>
-                    <source media="(min-width: 1200px)" srcset="img/desktop/photo-1-desktop.jpg 1x, img/desktop/photo-1-desktop@2x.jpg 2x">
-                    <source media="(min-width: 768px)" srcset="img/tablet/photo-1-tablet.jpg 1x, img/tablet/photo-1-tablet@2x.jpg 2x">
-                    <img class="media__img" src="img/catalog/photo-1-mobile-catalog.jpg" srcset="img/catalog/photo-1-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Народные просторы">
-                  </picture>
-                </div>
-              </a>
+              <div class="media__img-container">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/desktop/photo-1-desktop.jpg 1x, img/desktop/photo-1-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/tablet/photo-1-tablet.jpg 1x, img/tablet/photo-1-tablet@2x.jpg 2x">
+                  <img class="media__img" src="img/catalog/photo-1-mobile-catalog.jpg" srcset="img/catalog/photo-1-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Народные просторы">
+                </picture>
+              </div>
               <div class="media__caption-container media__caption-first">
                 <div class="media__caption-opacity">
                   <div class="media__caption-name">
@@ -72,11 +69,10 @@
                     <p class="media__figcaption">Автор фото: Борис</p>
                   </div>
                   <span class="media__likes media__likes-margin">1350</span>
-                  <svg class="media__icon-like">
-                    <use xlink:href="img/sprite.svg#icon-like"></use>
-                  </svg>
                   <div class="media__like-container media__like-position">
-
+                    <svg class="media__like-icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                    </svg>
                   </div>
                 </div>
               </div>
@@ -85,15 +81,13 @@
           <div class="media__img-gallery">
             <div class="media__photo media__photo-border">
               <div class="media__inner-container media__inner-img-1">
-                <a href="#">
-                  <div class="media__img-container-small media__img-1">
-                    <picture>
-                      <source media="(min-width: 1200px)" srcset="img/desktop/photo-2-desktop.jpg 1x, img/desktop/photo-2-desktop@2x.jpg 2x">
-                      <source media="(min-width: 768px)" srcset="img/tablet/photo-2-tablet.jpg 1x, img/tablet/photo-2-tablet@2x.jpg 2x">
-                      <img class="media__img" src="img/catalog/photo-2-mobile-catalog.jpg" srcset="img/catalog/photo-2-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Местная растительность">
-                    </picture>
-                  </div>
-                </a>
+                <div class="media__img-container-small media__img-1">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="img/desktop/photo-2-desktop.jpg 1x, img/desktop/photo-2-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/tablet/photo-2-tablet.jpg 1x, img/tablet/photo-2-tablet@2x.jpg 2x">
+                    <img class="media__img" src="img/catalog/photo-2-mobile-catalog.jpg" srcset="img/catalog/photo-2-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Местная растительность">
+                  </picture>
+                </div>
                 <div class="media__caption-container media__caption-second">
                   <div class="media__caption-name">
                     <h3 class="media__title">Местная растительность</h3>
@@ -110,15 +104,13 @@
             </div>
             <div class="media__photo media__photo-border">
               <div class="media__inner-container media__inner-img-2">
-                <a href="#">
-                  <div class="media__img-container-small media__img-2">
-                    <picture>
-                      <source media="(min-width: 1200px)" srcset="img/desktop/photo-3-desktop.jpg 1x, img/desktop/photo-3-desktop@2x.jpg 2x">
-                      <source media="(min-width: 768px)" srcset="img/tablet/photo-3-tablet.jpg 1x, img/tablet/photo-3-tablet@2x.jpg 2x">
-                      <img class="media__img" src="img/catalog/photo-3-mobile-catalog.jpg" srcset="img/catalog/photo-3-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Дорога на север">
-                    </picture>
-                  </div>
-                </a>
+                <div class="media__img-container-small media__img-2">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="img/desktop/photo-3-desktop.jpg 1x, img/desktop/photo-3-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/tablet/photo-3-tablet.jpg 1x, img/tablet/photo-3-tablet@2x.jpg 2x">
+                    <img class="media__img" src="img/catalog/photo-3-mobile-catalog.jpg" srcset="img/catalog/photo-3-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Дорога на север">
+                  </picture>
+                </div>
                 <div class="media__caption-container media__caption-color media__caption-second">
                   <div class="media__caption-name">
                     <h3 class="media__title">Дорога на север</h3>
@@ -135,15 +127,13 @@
             </div>
             <div class="media__photo media__photo-border">
               <div class="media__inner-container media__inner-img-3">
-                <a href="#">
-                  <div class="media__img-container-small media__img-3">
-                    <picture>
-                      <source media="(min-width: 1200px)" srcset="img/desktop/photo-4-desktop.jpg 1x, img/desktop/photo-4-desktop@2x.jpg 2x">
-                      <source media="(min-width: 768px)" srcset="img/tablet/photo-4-tablet.jpg 1x, img/tablet/photo-4-tablet@2x.jpg 2x">
-                      <img class="media__img" src="img/catalog/photo-4-mobile-catalog.jpg" srcset="img/catalog/photo-4-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Мост дьявола">
-                    </picture>
-                  </div>
-                </a>
+                <div class="media__img-container-small media__img-3">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="img/desktop/photo-4-desktop.jpg 1x, img/desktop/photo-4-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="img/tablet/photo-4-tablet.jpg 1x, img/tablet/photo-4-tablet@2x.jpg 2x">
+                    <img class="media__img" src="img/catalog/photo-4-mobile-catalog.jpg" srcset="img/catalog/photo-4-mobile-catalog@2x.jpg 2x" width="280" height="280" alt="Мост дьявола">
+                  </picture>
+                </div>
                 <div class="media__caption-container media__caption-second">
                   <div class="media__caption-name">
                     <h3 class="media__title">Мост дьявола</h3>
@@ -207,29 +197,14 @@
         <section class="social">
           <h2 class="social__title">#visitsedona</h2>
           <div class="social__links">
-            <a class="social__item" href="#">
-              <svg class="social__icon-twitter">
-                <use xlink:href="img/sprite.svg#icon-twitter"></use>
-              </svg>
-              <span class="visually-hidden">twitter</span>
-            </a>
-            <a class="social__item" href="#">
-              <svg class="social__icon-facebook">
-                <use xlink:href="img/sprite.svg#icon-facebook"></use>
-              </svg>
-              <span class="visually-hidden">facebook</span>
-            </a>
-            <a class="social__item" href="#">
-              <svg class="social__icon-youtube">
-                <use xlink:href="img/sprite.svg#icon-youtube"></use>
-              </svg>
-              <span class="visually-hidden">youtube</span>
-            </a>
+            <a class="social__item" href="#"><span class="visually-hidden">twitter</span></a>
+            <a class="social__item" href="#"><span class="visually-hidden">facebook</span></a>
+            <a class="social__item" href="#"><span class="visually-hidden">youtube</span></a>
           </div>
           <a class="social__dev" href="#">Разработано
             <div class="social__dev-icon-container">
-              <svg class="social__icon-htmlacademy">
-                <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+              <svg class="social__dev-icon" width="27" height="35" viewBox="0 0 27 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13.6 0H13.5L0 1.4V26.1L13.5 34.1L26.9 26.1V1.4L13.6 0ZM25 12.1L13.5 5.3V5.2H13.4L13.3 5.1V5.2L1.9 12.1V3.1L13.4 1.9L25 3.1V12.1ZM13.4 6.8L24.9 13.5L20.4 16.1L13.3 11.9V13.3L19.2 16.8L18.3 17.3L13.3 14.3V15.7L17.1 18L16.3 18.5L13.3 16.7V18.1L15.2 19.2L13.4 20.3L2 13.6L13.4 6.8ZM1.9 15.1L13.3 21.9V22.9L5.4 18.2V19.6L13.4 24.4V25.5L5.4 20.8V22.2L13.4 27L21.5 22.1V16.9L24.9 14.9V24.9L13.4 31.8L1.9 25V15.1Z" fill="black"/>
               </svg>
             </div>
           </a>
