Доработана навигация сайта/добавлен script.js/вставлена карта

--- a/source/form.html
+++ b/source/form.html
@@ -11,7 +11,7 @@
       <header class="page-header">
         <nav class="main-nav">
           <div class="main-nav__wrapper">
-            <ul class="main-nav__list">
+            <ul class="main-nav__list main-nav__visual main-nav__hide">
               <li class="main-nav__item">
                 <a class="main-nav__link main-nav__link--size-a" href="index.html"><span class="main-nav__text">Главная</span></a>
               </li>
@@ -24,18 +24,22 @@
               <li class="main-nav__item">
                 <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span class="main-nav__text">Html Academy</span></a>
               </li>
-              <li class="main-nav__item main-nav__item--logo">
-                <a class="main-nav__link-logo" href="#">
-                  <svg class="main-nav__icon-logo">
-                    <use xlink:href="img/sprite.svg#icon-logo"></use>
-                  </svg>
-                  <svg class="main-nav__icon-logo-desktop">
-                    <use xlink:href="img/sprite.svg#icon-logo-desktop"></use>
-                  </svg>
-                </a>
-              </li>
-              <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
+              <li class="main-nav__item"></li>
             </ul>
+          </div>
+          <div class="main-nav__basic-bar">
+            <div class="main-nav__item--logo main-nav__visual">
+              <a class="main-nav__link-logo" href="index.html">
+                <svg class="main-nav__icon-logo">
+                  <use xlink:href="img/sprite.svg#icon-logo"></use>
+                </svg>
+                <svg class="main-nav__icon-logo-desktop">
+                  <use xlink:href="img/sprite.svg#icon-logo-desktop"></use>
+                </svg>
+              </a>
+            </div>
+            <button class="main-nav__close-button main-nav__hide"><span class="visually-hidden">Закрыть</span></button>
+            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
           </div>
         </nav>
       </header>
@@ -190,6 +194,8 @@
           </a>
         </section>
       </footer>
+
+      <script src="js/script.js"></script>
     </div>
   </body>
 </html>
