--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
       <header class="page-header">
         <nav class="main-nav">
           <div class="main-nav__wrapper">
-            <ul class="main-nav__list">
+            <ul class="main-nav__list main-nav__visual main-nav__hide">
               <li class="main-nav__item">
                 <a class="main-nav__link main-nav__link--size-a" href="index.html"><span class="main-nav__text">Главная</span></a>
               </li>
@@ -24,18 +24,22 @@
               <li class="main-nav__item">
                 <a class="main-nav__link main-nav__link--size-d" href="https://htmlacademy.ru/"><span class="main-nav__text">Html Academy</span></a>
               </li>
-              <li class="main-nav__item main-nav__item--logo">
-                <a class="main-nav__link-logo" href="#">
-                  <svg class="main-nav__icon-logo">
-                    <use xlink:href="img/sprite.svg#icon-logo"></use>
-                  </svg>
-                  <svg class="main-nav__icon-logo-desktop">
-                    <use xlink:href="img/sprite.svg#icon-logo-desktop"></use>
-                  </svg>
-                </a>
-              </li>
-              <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
+              <li class="main-nav__item"></li>
             </ul>
+          </div>
+          <div class="main-nav__basic-bar">
+            <div class="main-nav__item--logo main-nav__visual">
+              <a class="main-nav__link-logo" href="index.html">
+                <svg class="main-nav__icon-logo">
+                  <use xlink:href="img/sprite.svg#icon-logo"></use>
+                </svg>
+                <svg class="main-nav__icon-logo-desktop">
+                  <use xlink:href="img/sprite.svg#icon-logo-desktop"></use>
+                </svg>
+              </a>
+            </div>
+            <button class="main-nav__close-button main-nav__hide"><span class="visually-hidden">Закрыть</span></button>
+            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
           </div>
         </nav>
       </header>
@@ -151,6 +155,7 @@
             <a class="interesting__search" href="#">Найти гостиницу</a>
           </div>
           <div class="interesting__map-container">
+            <iframe class="interesting__map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.86350535942!2d-111.796501753481!3d34.85330071362522!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da15809a0dee3%3A0x22ca556fbe412052!2sSedona%20%2F%20Red%20Rock%20Country!5e0!3m2!1sru!2sua!4v1611074716009!5m2!1sru!2sua" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <picture>
               <source type="image/webp" media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.webp 1x, img/desktop/map-desktop@2x.webp 2x">
 
@@ -198,5 +203,7 @@
         </section>
       </footer>
     </div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
