Доработаны состояния hover/active

--- a/source/form.html
+++ b/source/form.html
@@ -84,13 +84,13 @@
                     <div class="form-feedback__data-info">
                       <label for="phone"><span class="form-feedback__data-info-visual">Контактный телефон*:</span>
                         <span class="form-feedback__data-info-hide">Телефон*:</span>
-                        <input type="tel" name="tel" id="phone" placeholder="Введите телефон">
+                        <input class="form-feedback__phone" type="tel" name="tel" id="phone" placeholder="Введите телефон">
                         <div class="form-feedback__decoration-phone-container"></div>
                       </label>
                     </div>
                     <div class="form-feedback__data-info form-feedback__data-info-position">
                       <label for="mail">Электронная почта:
-                        <input type="email" name="email" id="mail" placeholder="Введите e-mail">
+                        <input class="form-feedback__email" type="email" name="email" id="mail" placeholder="Введите e-mail">
                       </label>
                       <div class="form-feedback__decoration-mail-container"></div>
                     </div>
@@ -185,7 +185,7 @@
               <span class="visually-hidden">youtube</span>
             </a>
           </div>
-          <a class="social__dev" href="#">Разработано
+          <a class="social__dev" href="https://htmlacademy.ru/">Разработано
             <div class="social__dev-icon-container">
               <svg class="social__icon-htmlacademy">
                 <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
