--- a/source/index.html
+++ b/source/index.html
@@ -193,7 +193,7 @@
               <span class="visually-hidden">youtube</span>
             </a>
           </div>
-          <a class="social__dev" href="#">Разработано
+          <a class="social__dev" href="https://htmlacademy.ru/">Разработано
             <div class="social__dev-icon-container">
               <svg class="social__icon-htmlacademy">
                 <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
