Автоматизация сборки проекта

--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page__body">
     <div class="page__container">
@@ -85,8 +85,8 @@
                       <label for="phone"><span class="form-feedback__data-info-visual">Контактный телефон*:</span>
                         <span class="form-feedback__data-info-hide">Телефон*:</span>
                         <input class="form-feedback__phone" type="tel" name="tel" id="phone" placeholder="Введите телефон">
-                        <div class="form-feedback__decoration-phone-container"></div>
                       </label>
+                      <div class="form-feedback__decoration-phone-container"></div>
                     </div>
                     <div class="form-feedback__data-info form-feedback__data-info-position">
                       <label for="mail">Электронная почта:
