--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body class="page__body">
     <div class="page__container">
@@ -155,7 +155,7 @@
             <a class="interesting__search" href="#">Найти гостиницу</a>
           </div>
           <div class="interesting__map-container">
-            <iframe class="interesting__map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.86350535942!2d-111.796501753481!3d34.85330071362522!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da15809a0dee3%3A0x22ca556fbe412052!2sSedona%20%2F%20Red%20Rock%20Country!5e0!3m2!1sru!2sua!4v1611074716009!5m2!1sru!2sua" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe class="interesting__map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.86350535942!2d-111.796501753481!3d34.85330071362522!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da15809a0dee3%3A0x22ca556fbe412052!2sSedona%20%2F%20Red%20Rock%20Country!5e0!3m2!1sru!2sua!4v1611074716009!5m2!1sru!2sua" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <picture>
               <source type="image/webp" media="(min-width: 1200px)" srcset="img/desktop/photo-bridge.webp 1x, img/desktop/map-desktop@2x.webp 2x">
 
