--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,7 @@
       <header class="page-header">
         <nav class="main-nav">
           <div class="main-nav__wrapper">
-            <ul class="main-nav__list main-nav__visual main-nav__hide">
+            <ul class="main-nav__list main-nav__visual">
               <li class="main-nav__item">
                 <a class="main-nav__link main-nav__link--size-a" href="index.html"><span class="main-nav__text">Главная</span></a>
               </li>
