--- a/source/form.html
+++ b/source/form.html
@@ -6,8 +6,8 @@
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/style.min.css">
   </head>
-  <body class="page__body">
-    <div class="page__container">
+  <body class="page-body">
+    <div class="page-container">
       <header class="page-header">
         <nav class="main-nav">
           <div class="main-nav__wrapper">
@@ -28,7 +28,7 @@
             </ul>
           </div>
           <div class="main-nav__basic-bar">
-            <div class="main-nav__item--logo main-nav__visual">
+            <div class="main-nav__item-logo main-nav__visual">
               <a class="main-nav__link-logo" href="index.html">
                 <svg class="main-nav__icon-logo">
                   <use xlink:href="img/sprite.svg#icon-logo"></use>
