--- a/source/form.html
+++ b/source/form.html
@@ -163,7 +163,7 @@
         </section>
       </main>
       <footer class="page-footer">
-        <section class="social">
+        <section class="social social-form">
           <h2 class="social__title">#visitsedona</h2>
           <div class="social__links">
             <a class="social__item" href="#">
