--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,7 +13,7 @@
       <header class="page-header">
         <nav class="main-nav">
           <div class="main-nav__wrapper">
-            <ul class="main-nav__list main-nav__visual">
+            <ul class="main-nav__list">
               <li class="main-nav__item">
                 <a class="main-nav__link main-nav__link--size-a" href="index.html"><span class="main-nav__text">Главная</span></a>
               </li>
@@ -40,8 +40,8 @@
                 </svg>
               </a>
             </div>
-            <button class="main-nav__close-button main-nav__hide"><span class="visually-hidden">Закрыть</span></button>
-            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Меню</span></button>
+            <button class="main-nav__close-button main-nav__hide main-nav__visual"><span class="visually-hidden">Закрыть</span></button>
+            <button class="main-nav__toggle main-nav__hide main-nav__visual" type="button"><span class="visually-hidden">Меню</span></button>
           </div>
         </nav>
       </header>
