--- a/source/index.html
+++ b/source/index.html
@@ -131,7 +131,7 @@
             <div class="features__block-container">
               <h2 class="features__title">Небольшая площадь</h2>
               <p class="features__number features__number-tablet">—№3—</p>
-              <p class="features__text">Все интересные места находятся очень близко</p>
+              <p class="features__text features__text-block1">Все интересные места находятся очень близко</p>
             </div>
           </div>
           <div class="features__block features__block-border">
@@ -145,7 +145,7 @@
             <div class="features__block-container">
               <h2 class="features__title">Мало туристов</h2>
               <p class="features__number">—№5—</p>
-              <p class="features__text">Большинство едет в Гранд каньон и толпится там</p>
+              <p class="features__text features__text-block3">Большинство едет в Гранд каньон и толпится там</p>
             </div>
           </div>
         </section>
